--- a/slider.css
+++ b/slider.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body {
     background-color: #404040;
     color: #fff;
@@ -16,13 +19,22 @@ body {
 .option {
     background-color: darkorange;
     font-weight: 700;
-    padding: 15px 25px;
+    padding: 0 25px;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .option:hover{
     cursor: pointer;
     background-color: #fff;
     color: darkorange;
+}
+
+.chosen{
+    border: 4px solid #fff;
 }
 
 #gallery img{
