--- a/slider.css
+++ b/slider.css
@@ -61,4 +61,12 @@ main{
     overflow: hidden;
     object-fit: cover;
     height: 300px;
+    /* prevents from blue highlighting width
+    fast clicking */
+    webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
